--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,20 @@ __pycache__/
 *.pyc
 *.pyo
 
-exmamples/__pycache__/
-exmamples/*.pyc
-exmamples/*.pyo
+examples/__pycache__/
+examples/*.pyc
+examples/*.pyo
 
 tests/__pycache__/
 tests/*.pyc
 tests/*.pyo
+
+build/*
+dist/*
+.idea/*
+*.egg-info/*
+*.egg
+*.log
+*.swp
 
 ```
