RTD - Added documentation

--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,11 @@ tests/__pycache__/
 tests/*.pyc
 tests/*.pyo
 
-build/*
-dist/*
-docs/build/*
-docs/source/_static/*
-docs/source/_templates/*
+build/
+dist/
+docs/build/
+docs/source/_static/
+docs/source/_templates/
 
 .idea/*
 *.egg-info/*
