RTD - Added documentation

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,19 @@ numpy
 scipy
 pyscf
 sphinx
-sphinx-rtd-theme
+sphinx-autodoc
+sphinx-copybutton
+sphinx-doctest
+sphinx-githubpages
+sphinx-intersphinx
+sphinx-todo
+sphinx-viewcode
+sphinx-napoleon
+sphinx-autosummary
+sphinx-autosectionlabel
+autoapi
+sphinx-autodoc-typehints
+sphinx-last-updated-by-git
+sphinxcontrib-bibtex
+sphinx-mathjax
+sphinx-favicon
