--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,4 @@
 numpy
 scipy
 pyscf
-sphinx-copybutton
-sphinxcontrib-napoleon
-sphinx.ext.autosummary
-autoapi
-sphinx-last-updated-by-git
-sphinxcontrib-bibtex
-sphinx-favicon
+sphinx
