--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,6 +9,7 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.13"
+  build-path: docs
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
