RTD - Added documentation

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ tests/*.pyo
 build/
 dist/
 docs/build/
-docs/_static/
-docs/_templates/
+docs/source/_static/
+docs/source/_templates/
 
 .idea/*
 *.egg-info/*
