--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,13 +12,13 @@ build:
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
-  configuration: docs/source/conf.py
+  configuration: source/conf.py
 
 # Optionally, but recommended,
 # declare the Python requirements required to build your documentation
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
    install:
-   - requirements: docs/source/requirements.txt
+   - requirements: source/requirements.txt
 
 
