--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -19,6 +19,6 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
    install:
-   - requirements: source/requirements.txt
+   - requirements: docs/source/requirements.txt
 
 
