RTD - Added documentation

--- a/docs/source/requirements.txt
+++ b/docs/source/requirements.txt
@@ -2,6 +2,6 @@ sphinx-copybutton
 sphinxcontrib-napoleon
 sphinx-autoapi
 sphinx-last-updated-by-git
-sphinxcontrib.bibtex
+sphinxcontrib-bibtex
 sphinx-favicon
 insegel
