--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,9 +13,18 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Check Python version
+        run: python --version
+
+      - name: Clear pip cache
+        run: pip cache purge
+
+      - name: Upgrade pip, setuptools, wheel, pip-tools
+        run: |
+          python -m pip install --upgrade pip setuptools wheel pip-tools
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
 
       - name: Run tests
