--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,6 +23,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools wheel pip-tools
 
+      - name: Install your package for testing
+        run: |
+          pip install . # This will install esipython from setup.py
+
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
