--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,9 +8,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Set up Python from .python-version file
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          # Note: 'python-version' is omitted, and 'python-version-file' is used implicitly
+          # or explicitly if you prefer, but it defaults to looking for it.
+          # python-version-file: '.python-version' # You could explicitly state this too
 
       - name: Check Python version
         run: python --version
