--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,25 +8,33 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+          # No 'cache: pip' input here, so actions/setup-python won't manage a pip cache
 
       - name: Check Python version
         run: python --version
 
+      - name: Clear pip cache
+        run: python -m pip cache purge # This explicitly clears pip's cache
+
       - name: Upgrade pip, setuptools, wheel, pip-tools
         run: |
           python -m ensurepip --upgrade
-          python -m pip install --upgrade pip setuptools wheel pip-tools
+          # Add --no-cache-dir to pip install commands to prevent caching during upgrade
+          python -m pip install --upgrade --no-cache-dir pip setuptools wheel pip-tools
 
       - name: Install your package for testing
         run: |
-          python -m pip install .
+          # Add --no-cache-dir to pip install to prevent caching of the installed package
+          python -m pip install --no-cache-dir .
 
       - name: Install dependencies
         run: |
-          python -m pip install -r requirements.txt
+          # Add --no-cache-dir to pip install to prevent caching of dependencies
+          python -m pip install --no-cache-dir -r requirements.txt
 
       - name: Run tests
         run: |
