--- a/.github/workflows/act.yaml
+++ b/.github/workflows/act.yaml
@@ -12,6 +12,10 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.10'
+          check-latest: false
+          update-environment: true
+          allow-prerelease: false
+          freethreaded: false
 
       - name: Check Python version
         run: python --version
